--- a/app/src/main/res/layout/activity_auth_option.xml
+++ b/app/src/main/res/layout/activity_auth_option.xml
@@ -16,29 +16,6 @@
         app:layout_constraintGuide_percent="0.0" />
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="161dp"
-        android:layout_height="44dp"
-        android:layout_above="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:onClick="regis"
-        app:cardBackgroundColor="@color/green"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/cardView1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3">
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Register"
-            android:gravity="center"
-            android:textColor="#fff"
-            android:textSize="18sp" />
-    </androidx.cardview.widget.CardView>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -76,32 +53,33 @@
         app:layout_constraintTop_toTopOf="@+id/guideline1"
         app:layout_constraintVertical_bias="0.79" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView1"
-        android:layout_width="161dp"
-        android:layout_height="44dp"
-        android:layout_above="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:onClick="login"
-        app:cardBackgroundColor="@color/green"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
+    <Button
+        android:id="@+id/regis"
+        android:layout_width="143dp"
+        android:layout_height="42dp"
+        android:background="@drawable/bg_button"
+        android:onClick="regis"
+        android:text="Register"
+        android:textColor="@color/lightgray"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:layout_constraintVertical_bias="0.496">
+        app:layout_constraintVertical_bias="0.248" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:gravity="center"
-            android:textColor="#fff"
-            android:textSize="18sp" />
-    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="143dp"
+        android:layout_height="42dp"
+        android:background="@drawable/bg_button"
+        android:onClick="login"
+        android:text="Login"
+        android:textColor="@color/lightgray"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/regis"
+        app:layout_constraintVertical_bias="0.359" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
