--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="testcolorblue">#152b38</color>
     <color name="pink">#fe104d</color>
     <color name="black_overlay">#66000000</color>
+    <color name="color1">#424549</color>
+    <color name="color2">#6A82D5</color>
+    <color name="color3">#304735</color>
+    <color name="color4">#854D82</color>
+
 </resources>
