--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,6 +12,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     android:id="@+id/drawer_layout">
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -28,21 +29,58 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp">
+
+        <LinearLayout
+            android:layout_width="392dp"
+            android:layout_height="239dp"
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="6dp">
+
+                <technolifestyle.com.imageslider.FlipperLayout
+                    android:id="@+id/imageSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
+                    app:sliderAnimationDuration="600"
+                    app:sliderAutoCycleDirection="back_and_forth"
+                    app:sliderAutoCycleEnabled="true"
+                    app:sliderIndicatorAnimationDuration="600"
+                    app:sliderIndicatorGravity="center_horizontal|bottom"
+                    app:sliderIndicatorMargin="15dp"
+                    app:sliderIndicatorOrientation="horizontal"
+                    app:sliderIndicatorPadding="3dp"
+                    app:sliderIndicatorRadius="2dp"
+                    app:sliderIndicatorSelectedColor="#5A5A5A"
+                    app:sliderIndicatorUnselectedColor="#FFF"
+                    app:sliderScrollTimeInSec="3"
+                    app:sliderStartAutoCycle="true" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     <LinearLayout
         android:clipToPadding="false"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
-            android:foreground="?android:attr/selectableItemBackground"
+            android:layout_width="158dp"
+            android:layout_height="147dp"
+            android:layout_margin="10dp"
             android:clickable="true"
-            android:layout_width="340dp"
-            android:layout_height="150dp"
-            android:layout_margin="10dp">
+            app:cardCornerRadius="15dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="baca">
 
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -53,51 +91,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cercleshapes"
                     android:padding="10dp"
-                    android:src="@drawable/logofix" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Assalamualaikum"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_margin="10dp"
-                    android:background="@color/lightgray" />
-
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-    <LinearLayout
-        android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:onClick="baca"
-            android:layout_width="160dp"
-            android:layout_height="190dp"
-            android:layout_margin="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:background="@drawable/cercleshapes"
-                    android:src="@drawable/islam"
-                    android:padding="10dp"/>
+                    android:src="@drawable/islam" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -112,8 +106,9 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:onClick="latihankuy"
-            android:layout_width="160dp"
-            android:layout_height="190dp"
+            app:cardCornerRadius="15dp"
+            android:layout_width="158dp"
+            android:layout_height="147dp"
             android:layout_margin="10dp">
 
             <LinearLayout
@@ -149,8 +144,9 @@
         <androidx.cardview.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:layout_width="160dp"
-            android:layout_height="190dp"
+            android:layout_width="158dp"
+            android:layout_height="147dp"
+            app:cardCornerRadius="15dp"
             android:layout_margin="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -161,7 +157,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/cercleshapes"
-                    android:src="@drawable/knowledge"
+                    android:src="@drawable/brain"
                     android:padding="10dp"/>
 
                 <TextView
@@ -177,9 +173,9 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:onClick="klik"
-            android:background="@drawable/background1"
-            android:layout_width="160dp"
-            android:layout_height="190dp"
+            app:cardCornerRadius="15dp"
+            android:layout_width="158dp"
+            android:layout_height="147dp"
             android:layout_margin="10dp">
 
             <LinearLayout
