--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="86dp"
         android:layout_marginBottom="44dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
@@ -38,7 +38,7 @@
         android:id="@+id/passwordLg"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
