--- a/app/src/main/res/layout/activity_regis.xml
+++ b/app/src/main/res/layout/activity_regis.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="88dp"
         android:layout_marginBottom="-95dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
@@ -42,7 +42,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="86dp"
         android:layout_marginBottom="-99dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -56,7 +56,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="88dp"
         android:layout_marginBottom="13dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="Nama"
         android:inputType="textPersonName"
@@ -72,7 +72,7 @@
         android:layout_marginStart="-1dp"
         android:layout_marginLeft="-1dp"
         android:layout_marginBottom="275dp"
-        android:background="#11000000"
+        android:background="@drawable/bg_edit"
         android:ems="10"
         android:hint="No Handphone"
         android:inputType="text|number" />
