--- a/app/src/main/res/layout/materi.xml
+++ b/app/src/main/res/layout/materi.xml
@@ -59,6 +59,7 @@
         <androidx.cardview.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="hijariyah"
             android:layout_width="160dp"
             android:layout_height="190dp"
             android:layout_margin="10dp">
@@ -145,6 +146,7 @@
         <androidx.cardview.widget.CardView
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="kisahNabi"
             android:layout_width="160dp"
             android:layout_height="190dp"
             android:layout_margin="10dp">
