--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".quiz">
 
-   
+
     <TextView
         android:id="@+id/question"
         android:layout_width="200dp"
@@ -36,7 +36,7 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:src="@drawable/alif"
+            android:src="@drawable/ba"
             android:textColor="#000" />
 
         <ImageView
