--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -31,7 +31,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/question1"
+            android:id="@+id/questionImage"
             android:layout_width="250dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
