--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,19 +8,32 @@
     android:orientation="vertical"
     tools:context=".quiz">
 
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginTop="25dp"
+        android:background=""
+        android:progress="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
    
     <TextView
         android:id="@+id/question"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         android:lineSpacingExtra="6dp"
         android:text="Bagaimana Pelafalan dari huruf berikut"
         android:textAlignment="center"
         android:textColor="#fff"
         android:textSize="20sp"
         android:textStyle="bold" />
+
 
     <LinearLayout
         android:layout_width="300dp"
@@ -54,12 +67,12 @@
         android:layout_marginTop="40dp">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/opt1"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/bgpurple"
             android:clickable="true"
+            android:id="@+id/cvOpt1"
             android:onClick="pick01"
             android:focusable="auto"
             app:layout_constraintEnd_toStartOf="@id/opt2"
@@ -67,14 +80,18 @@
             app:layout_constraintStart_toStartOf="@id/guidelinel"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <RadioButton
+                android:id="@+id/option1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="A"
-                android:textColor="#000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="RadioButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -83,22 +100,24 @@
             android:layout_height="50dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/bgpurple"
+            app:layout_constraintTop_toBottomOf="@+id/cvOpt1"
             android:clickable="true"
             android:focusable="auto"
             android:onClick="pick03"
-            app:layout_constraintTop_toBottomOf="@id/opt1"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="97dp">
 
-            <TextView
+            <RadioButton
+                android:id="@+id/option3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Alif"
-                android:textColor="#000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="RadioButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -115,14 +134,16 @@
             app:layout_constraintStart_toEndOf="@id/opt3"
             app:layout_constraintTop_toBottomOf="@id/opt2">
 
-            <TextView
+            <RadioButton
+                android:id="@+id/option4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Tsa"
-                android:textColor="#000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="RadioButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.cardview.widget.CardView>
 
         <androidx.constraintlayout.widget.Guideline
@@ -153,17 +174,30 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="219dp">
 
-            <TextView
+            <RadioButton
+                android:id="@+id/option2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Ain"
-                android:textColor="#000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="RadioButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Check"
+        android:onClick="confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 
 
 </LinearLayout>
