upload question layout done, check 4 //error

--- a/app/src/main/res/layout/upload_question.xml
+++ b/app/src/main/res/layout/upload_question.xml
@@ -12,8 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25"
-        app:layout_constraintGuide_begin="162dp" />
+        app:layout_constraintGuide_begin="184dp" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
@@ -58,57 +57,106 @@
         app:layout_constraintGuide_begin="162dp" />
 
     <TextView
+        android:id="@+id/tvBab"
         android:layout_width="wrap_content"
-        android:id="@+id/tvOpt1"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Bab Quiz : "
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/guidelinel"
+        app:layout_constraintTop_toBottomOf="@+id/guidelinet" />
+
+    <EditText
+        android:id="@+id/etBabQuiz"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:hint="Bab Quiz"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideliner"
+        app:layout_constraintHorizontal_bias="0.994"
+        app:layout_constraintStart_toEndOf="@+id/tvBab"
+        app:layout_constraintTop_toBottomOf="@+id/guidelinet" />
+
+    <ImageView
+        android:id="@+id/imgSelection"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="104dp"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toStartOf="@id/pilihGambar"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/guidelinel"
+        app:layout_constraintTop_toBottomOf="@id/guidelinet" />
+
+    <Button
+        android:id="@+id/pilihGambar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:onClick="pickImage"
+        android:text="Pilih Gambar"
+        app:layout_constraintEnd_toStartOf="@+id/guideliner"
+        app:layout_constraintTop_toBottomOf="@+id/guideline1" />
+
+    <TextView
+        android:id="@+id/tvOpt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="344dp"
         android:text="Pilihan 1 : "
-        android:layout_marginTop="90dp"
-        android:textSize="25sp"
         android:textColor="#000"
-        app:layout_constraintTop_toTopOf="@id/guidelinet"
-        app:layout_constraintStart_toStartOf="@id/guidelinel"/>
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@id/guidelinel"
+        app:layout_constraintTop_toTopOf="@id/guidelinet" />
 
     <EditText
         android:id="@+id/etOpt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="172dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="328dp"
         android:gravity="end"
         android:hint="Pilihan 1"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/tvOpt1"
         app:layout_constraintTop_toBottomOf="@id/guidelinet" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tvOpt2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="272dp"
         android:text="Pilihan 2 : "
-        android:textSize="25sp"
-        android:layout_marginTop="88dp"
         android:textColor="#000"
-        app:layout_constraintTop_toTopOf="@id/guideline1"
-        app:layout_constraintStart_toStartOf="@id/guidelinel"/>
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@id/guidelinel"
+        app:layout_constraintTop_toTopOf="@id/guideline1" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tvPert"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="272dp"
         android:text="Pertanyaan : "
-        android:textSize="25sp"
         android:textColor="#000"
-        app:layout_constraintTop_toTopOf="@id/guidelinet"
-        app:layout_constraintStart_toStartOf="@id/guidelinel"/>
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@id/guidelinel"
+        app:layout_constraintTop_toTopOf="@id/guidelinet" />
 
     <EditText
+        android:id="@+id/etPert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="116dp"
+        android:layout_marginTop="256dp"
         android:gravity="end"
-        android:id="@+id/etPert"
         android:hint="Pertanyaan"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tvPert"
         app:layout_constraintTop_toBottomOf="@id/guidelinet" />
 
@@ -117,33 +165,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="172dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="8dp"
         android:gravity="end"
         android:hint="Pilihan 4"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/tvOpt4"
         app:layout_constraintTop_toBottomOf="@id/etOpt3" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:id="@+id/tvOpt4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Pilihan 4 : "
-        android:textSize="25sp"
         android:textColor="#000"
-        android:layout_marginTop="88dp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="@id/guidelinel"
-        app:layout_constraintTop_toBottomOf="@id/tvOpt3"/>
+        app:layout_constraintTop_toBottomOf="@id/tvOpt3" />
 
     <EditText
+        android:id="@+id/etOpt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="172dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="12dp"
         android:gravity="end"
-        android:id="@+id/etOpt3"
         android:hint="Pilihan 3"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/tvOpt3"
         app:layout_constraintTop_toBottomOf="@id/etOpt2" />
 
@@ -151,7 +203,7 @@
         android:id="@+id/tvOpt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="28dp"
         android:text="Pilihan 3 : "
         android:textColor="#000"
         android:textSize="25sp"
@@ -162,19 +214,22 @@
         android:id="@+id/etOpt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="272dp"
         android:gravity="end"
         android:hint="Pilihan 2"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/guideline1"
-        tools:layout_editor_absoluteX="307dp" />
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/tvOpt2"
+        app:layout_constraintTop_toBottomOf="@id/guideline1" />
 
     <TextView
         android:id="@+id/tvCrOpt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:text="Pilihan 3 : "
+        android:layout_marginTop="32dp"
+        android:text="Jawaban Benar: "
         android:textColor="#000"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="@id/guidelinel"
@@ -184,13 +239,17 @@
         android:id="@+id/etCrOpt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="72dp"
         android:gravity="end"
-        android:hint="Pilihan 2"
+        android:hint="Kunci"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@id/guideliner"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@id/tvCrOpt"
-        app:layout_constraintTop_toBottomOf="@id/etOpt4" />
+        app:layout_constraintTop_toBottomOf="@id/etOpt4"
+        app:layout_constraintVertical_bias="0.848" />
 
     <Button
         android:layout_width="wrap_content"
@@ -203,6 +262,16 @@
         app:layout_constraintEnd_toStartOf="@id/guideliner"
         app:layout_constraintTop_toBottomOf="@id/tvCrOpt"/>
 
+    <ProgressBar
+        android:id="@+id/progressBarUpQ"
+        app:layout_constraintTop_toBottomOf="@id/guidelinet"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="143dp"
+        tools:layout_editor_absoluteY="83dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
