--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -49,8 +49,15 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:src="@drawable/alif"
-            android:onClick="clue"
             android:textColor="#000" />
+
+        <ImageView
+            android:id="@+id/listen"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:onClick="clue"
+            android:src="@drawable/speaker" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
