--- a/app/src/main/res/layout/materi.xml
+++ b/app/src/main/res/layout/materi.xml
@@ -34,7 +34,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:background="@drawable/cercleshapes"
-                    android:src="@drawable/knowledge"
+                    android:src="@drawable/know"
                     android:padding="10dp"/>
 
                 <TextView
@@ -78,7 +78,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cercleshapes"
                     android:padding="10dp"
-                    android:src="@drawable/muslim" />
+                    android:src="@drawable/religionnn" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,45 +106,4 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="199dp"
-        android:clipToPadding="false"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="368dp"
-            android:layout_height="185dp"
-            android:layout_margin="10dp"
-            android:foreground="?android:attr/selectableItemBackground">
-
-            <LinearLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/materiback"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:background="@drawable/cercleshapes"
-                    android:padding="10dp"
-                    android:src="@drawable/logofix" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="'Tidak Ada Kata Terlambat Untuk Belajar' "
-                    android:textColor="#FFFFFD"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-    </LinearLayout>
 </LinearLayout>
