--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -29,7 +29,7 @@
                 android:layout_below="@id/image1"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
-                android:text="BAB I"
+                android:text="Akah Nikah"
                 android:textColor="#262626"
                 android:textSize="30sp"
                 android:textStyle="bold"
