--- a/app/src/main/res/layout/comment_single_list_item.xml
+++ b/app/src/main/res/layout/comment_single_list_item.xml
@@ -49,32 +49,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/blogUsername" />
 
             <TextView
-                android:id="@+id/blogQuestion"
+                android:id="@+id/commentPH"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="Ini Pertanyaan user"
+                android:text="Ini Comment user"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blogDate"
                 app:layout_constraintVertical_bias="0.0" />
-
-            <ImageView
-                android:id="@+id/forumComents"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.043"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/blogQuestion"
-                app:layout_constraintVertical_bias="0.071"
-                app:srcCompat="@drawable/ic_reply_black_24dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
