--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -33,11 +33,11 @@
         android:id="@+id/commentPostBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="32dp"
         android:onClick="post"
-        android:layout_marginTop="460dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toEndOf="@+id/commentField"
-        app:layout_constraintTop_toBottomOf="@+id/commentCont"
         app:srcCompat="@drawable/ic_send_black_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
