--- a/app/src/main/res/layout/activity_add_new_post.xml
+++ b/app/src/main/res/layout/activity_add_new_post.xml
@@ -4,28 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/android"
     tools:context=".addNewPost">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="387dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="92dp"
+        android:fontFamily="@font/baloo"
+        android:text="Post Pertanyaan Anda"
+        android:textAlignment="center"
+        android:textColor="#D9EDE9E9"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/etPertanyaan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-            android:id="@+id/etPertanyaan"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="50dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Tambahkan Pertanyaan"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="59dp" />
-        <Button
-            android:id="@+id/btPostQuestion"
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:onClick="post"
-            android:elevation="30dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/etPertanyaan"
-            android:text="Post Pertanyaan"
-            android:textSize="20sp"/>
+        android:id="@+id/etPertanyaan"
+        android:layout_width="365dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="324dp"
+        android:background="@drawable/bg_edit"
+        android:hint="Tambahkan Pertanyaan"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btPostQuestion"
+        android:layout_width="163dp"
+        android:layout_height="43dp"
+        android:background="@drawable/bg_button"
+        android:elevation="30dp"
+        android:onClick="post"
+        android:text="Post"
+        android:textColor="@color/lightgray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPertanyaan"
+        app:layout_constraintVertical_bias="0.732" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
